crates/rtd/tests/snapshots/ptb_files_tests__publish_not_a_package.ptb.snap
---
source: crates/rtd/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭─────────────────────╮
│ PTB Preview         │
├────────────┬────────┤
│ command    │ values │
├────────────┼────────┤
│ gas-budget │ 1000   │
╰────────────┴────────╯
 === BUILT PTB === 
