crates/rtd/tests/snapshots/ptb_files_tests__quote_escapes.ptb.snap
---
source: crates/rtd/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭───────────────────╮
│ PTB Preview       │
├─────────┬─────────┤
│ command │ values  │
├─────────┼─────────┤
│ assign  │ bar "(" │
│ assign  │ bar "(" │
│ assign  │ bar ")" │
│ assign  │ bar ")" │
│ assign  │ bar "[" │
│ assign  │ bar "[" │
│ assign  │ bar "]" │
│ assign  │ bar "]" │
╰─────────┴─────────╯
 === BUILT PTB === 
